_sass/base.scss
/* ... */
.nav-secondary {
  @media (min-width: $screen-sm) {
    display: flex;
    align-items: center;
    flex-direction: row-reverse;
    border-bottom: 1px solid $border-color;
  }
  .tagline {
    font-size: .75rem;
    color: $red;
    opacity: .85;
    @media (min-width: $screen-sm) {
      flex: 1;
      margin-left: 40px;
    }
    @media (max-width: $screen-sm) {
      position: absolute;
      bottom: 30px;
      right: 24px;
    }
  }

  .nav-item-donate {
    background-color: $red;
    color: $white;
    font-family: $font-headline;
    letter-spacing: .035em;
    text-transform: uppercase;
    line-height: 1;
    text-align: center;
    padding: 11px 40px 13px;
    @media (max-width: $screen-sm) {
      display: block;
      margin: 16px 0 24px;
    }
  }
}

.social-links {
  margin-right: 16px;
  li {
    display: inline-block;
    margin-right: 2px;
  }
  a {
    svg {
      height: 14px;
      width: auto;
      @media (max-width: $screen-sm) {
        height: 20px;
        width: auto;
      }
    }
    span {
      display: inline-block;
      text-indent: -9999px;
    }
    &:hover {
      svg {
        path {
          fill: shade($red, 10%);
        }
      }
    }
  }
}

.search-link {
  display: block;
  background-image: url(../images/icon-search.svg);
  background-repeat: no-repeat;
  background-size: 18px 18px;
  background-position: left center;
  @media (min-width: $screen-sm) {
    width: 18px;
    height: 40px;
    text-indent: -9999px;
    background-position: right center;
  }
  @media (max-width: $screen-sm) {
    padding-left: 22px;
    margin: 24px 0;
    background-size: 14px 14px;
  }
}

.search-on {
  overflow: hidden;
}

#search-overlay {
  position: fixed;
  top: 0;
  left: 0;
  background-color: rgba(240, 239, 239, .85);
  width: 100%;
  height: 100%;
  z-index: 1001;
  display: none;
  overflow-y: scroll;
  transition: opacity 0.3s ease 0s,display 0.3s linear 0s;
  grid-template-columns: repeat(2, 1fr);
  @media (max-width: $screen-sm) {
    grid-template-columns: repeat(3, 1fr);
  }
  @media (max-width: $screen-xs) {
    grid-template-columns: repeat(1, 1fr);
  }
  &.search-show {
    display: grid;
  }
}

.search-contents {
  grid-column: 2 / -1;
  @media (max-width: $screen-xs) {
    grid-column: 1 / -1;
  }
}

.search-wrap {
  background-color: $white;
  padding: 40px;
  width: 100%;
  min-height: 100%;
  border-left: 1px solid $border-color;
  @media (max-width: $screen-xs) {
    padding: 24px;
  }
}

.search-head {
  display: flex;
  padding-top: 24px;
  margin-bottom: 40px;
}

#search-input {
  line-height: 1.5rem;
  background: transparent;
  padding: 10px 12px 12px;
  white-space: nowrap;
  border-radius: $default-border-radius;
  border: 1px solid $border-color;
  font-size: 1rem;
  color: $blue-dark;
  box-shadow: none;
  flex: 1;
  background-image: url(../images/icon-search.svg);
  background-repeat: no-repeat;
  background-size: 18px 18px;
  background-position: right 14px center;
  &:focus {
    border-color: $red;
  }
}

.close-overlay {
  grid-column: 1 / 2;
  cursor: pointer;
  @media (max-width: $screen-xs) {
    display: none;
  }
}

.close-button {
  font-size: 1rem;
  text-align: right;
  padding: 14px 0 11px 24px;
  margin-left: 16px;
  cursor: pointer;
  z-index: 1002;
}

.results-placeholder {
  text-align: center;
  margin-top: 120px;
  color: $blue-grey;
  font-size: 1rem;
}

.results-link {
  padding: 1rem;
  text-decoration: none;
  h3 {
    margin-bottom: 12px;
    @media (min-width: $screen-sm) {
      font-size: 1.375rem;
    }
  }
  h5 {
    font-size: 0.875rem;
    color: $red;
    margin-bottom: 12px;
  }
  h6 {
    font-size: 0.875rem;
    margin-top: 12px;
  }
  .search-result-summary {
    font-size: 0.875rem;
  }
}

.results-link:hover {
  .search-result-title {
    text-decoration: underline;
  }
}

.search-result-title {
  color: $blue-dark;
}

.nav-mobile {
  display: none;
  @media (max-width: $screen-sm) {
    display: block;
  }
}

.nav-mobile-header {
  display: flex;
  align-items: center;
  margin-left: 16px;
}

.nav-mobile-logo {
  flex: 1;
  img {
    height: 40px;
    width: auto;
  }
}

.nav-mobile-links-wrapper {
  padding: 0 16px;
  @media (min-width: $screen-sm) {
    display: none;
  }
}

.nav-mobile-links {
  border-top: 1px solid $border-color;
  border-bottom: 1px solid $border-color;
  .nav-group {
    display: flex;
    justify-content: space-between;
    a {
      padding: 13px 0 14px;
      font-size: 0.9375rem;
      &.donate {
        font-weight: bold;
      }
      @media (max-width: 360px) {
        font-size: .875rem;
      }
    }
  }
}

#nav-anchor {
  display: block;
  width: 72px;
  height: 40px;
  background-image: url(../images/icon-nav.svg);
  background-position: center center;
  background-repeat: no-repeat;
  background-size: 24px 14px;
  border-left: 1px solid $border-color;
  margin: 16px 0;
}


////////////////////////////////////////////////
////////////////// Site Footer /////////////////
////////////////////////////////////////////////


.site-footer {
  background-color: $red;
  float: left;
  width: 100%;
  h4 {
    color: $white;
  }
  @media (min-width: $screen-sm) {
    padding: 40px 0 0;
  }
  .nav-group {
    margin-bottom: 32px;
    a {
      display: block;
      color: $white;
      margin-bottom: 12px;
      &:hover {
        color: tint($red, 75%);
      }
    }
  }
  .social-links {
    margin-top: 40px;
    @media (min-width: $screen-sm) {
      margin-top: 80px;
    }
    svg {
      height: 18px;
      path {
        fill: $white;
      }
    }
    a:hover {
      svg path {
        fill: tint($red, 75%);
      }
    }
  }
}

.footer-body {
  @media (min-width: $screen-sm) {
    display: grid;
    grid-template-columns: repeat(5, 1fr);
    margin-bottom: 10px;
  }
}

.footer-group {
  padding: 16px;
  @media (min-width: $screen-sm) {
    padding: 0 40px;
  }
}
/* ... */

